Fixed wrong font size when printing All Passwords page

--- a/data/allpasswords/allpasswords.scss
+++ b/data/allpasswords/allpasswords.scss
@@ -55,7 +55,6 @@ body
   @media print
   {
     @include padding-inline-start(0);
-    font-size: $font-size-print;
   }
 }
 
@@ -65,6 +64,11 @@ button
 {
   font-family: $font-family;
   font-size: $font-size;
+
+  @media print
+  {
+    font-size: $font-size-print;
+  }
 }
 
 #export,
